css/main.css
*{
    box-sizing: border-box;
    background-color: black;
}

.cal{
    width: 380px;
}

body{
    margin-top: 2px;
    margin-left: 2px;
    margin-right: 2px;
    margin-bottom: 2px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.display{
    color: white;
    text-align: right;
    height: 165px;
    font-size: 60px;
    padding-top: 70px;
    padding-right: 15px;
}

/* for smaller devices */
@media (min-width: 300px) and (max-width: 390px){

    .display{
        height: 125px;
        padding-top: 40px;
    }
}

/* for ipad in potrait view */
@media (min-width: 605px) and (max-width: 1000px){
    
    .cal {
        width: 500px;
    }

    .display{
        font-size: 80px;
        padding-top: 50px;
    }
}

/* for ipad pro */
@media (min-width: 1024px) and (max-width: 1200px) and (min-height:900px) {
    
    .cal {
        width: 700px;
    }

    .display{
        height: 200px;
        font-size: 80px;
        padding-top: 80px;
    }
}

/* for ipad pro landscape mode */
@media (min-width: 1200px) and (max-width: 1400px){
    
    .cal {
        width: 500px;
    }

    .display{
        height: 200px;
        font-size: 80px;
        padding-top: 70px;
    }
}

.button{
    background-color: #e9e9e9;
    border: none;
    margin-right: 2.3px;
    border-radius: 15px;
    flex-basis: 25%;
    height: 13vh;
    margin-bottom: 2.5px;
    font-size: xx-large;
    touch-action: manipulation;
}

.row1{
    display:flex;
}

.row2{
    display:flex;
}

.row3{
    display:flex;
}

.row4{
    display:flex;
}

.row5{
    display:flex;
}

.x2-size{
    flex-basis: 50%;
    margin-bottom: 2.5px;
    font-size: xx-large;
}

.lhs-buttons{
    margin-left: 2.5px;
}

.button:last-child{
    background-color: #f3920b;
    color: white;
}

.button:focus{outline:none;}   /* added a focus element below to retain the accesibility */

.button:hover{
    cursor: pointer;
    background-color: #cfcfcf;
}

.button:last-child:hover{
    background-color: #dfb07e;
}

.button:focus{
    background-color: #cfcfcf;
}

.button:last-child:focus{
    background-color: #dfb07e;
}

.button:active{
    background-color: #cfcfcf;
}

.button:last-child:active{
    background-color: #dd8d37;
}

